fix(index.css): button no longer overlaps the sliders

--- a/owalo-react/src/index.css
+++ b/owalo-react/src/index.css
@@ -143,6 +143,8 @@ button:hover {
   height: calc(100vh - 70px);
   overflow-y: auto;
   width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 .flavourBox {
@@ -150,11 +152,11 @@ button:hover {
   display: flex;
 }
 
-.flavourBox:last-of-type {
+.flavourBox:first-of-type {
   margin-bottom: 200px;
 }
 
-.flavourBox:first-of-type {
+.flavourBox:last-of-type {
   margin-top: 50px;
 }
 
